network app added

--- a/index.html
+++ b/index.html
@@ -246,6 +246,55 @@
                         </div>
                     </div>
                 </div>
+                <div  class="project-block">
+                    <div class="hover_place">
+                        <img class="imge" src="img/projects/originals/network_cover.png" alt="">
+                    </div>
+                    <div class="flip-content">
+                        <div class="flip-content-inner">
+                            <div class="flip-content-front">
+                                <div class="text">
+                                    <h3>Twitter-Like Django App</h3>
+                                    <p><strong>Django</strong></p>
+                                    <p>Twitter like network with Python Dango allows you to Register your mailbox(user@example.com) and select an avatar.
+                                        User can post posts on the main page, follow users and like posts. Also user can only view following posts as well 
+                                        as open the profile of any other user and see thi user's posts</p>
+                                </div>
+                                <div class="hidden-links">
+                                    <ul>
+                                        <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
+                                        <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                        <li><a href="https://github.com/ymmy1/network" target="_blank">YouTube</a></li>    
+                                    </ul>
+                                </div>
+                                <div class="languages">
+                                    <span>Languages</span>
+                                    <div class="skill-bar">
+                                        <div class="py" style="width: 41.1%;"></div>
+                                        <div class="html" style="width: 40.9%;"></div>
+                                        <div class="css" style="width: 12.0%;"></div>
+                                        <div class="js" style="width: 6.0%;"></div>
+                                    </div>
+                                    <div class="details">
+                                        <ul>
+                                            <li><div class="py"></div>Python 41.1%</li>
+                                            <li><div class="html"></div>HTML 40.9%</li>
+                                            <li><div class="css"></div>CSS 12.0%</li>
+                                            <li><div class="js"></div>JavaScript 6.0%</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-content-back" id="mail-flip">
+                                <ul>
+                                    <li><a href="https://github.com/ymmy1/mail" target="_blank">GitHub</a></li>
+                                    <li><a href="http://mail-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                    <li><a href="https://www.youtube.com/watch?v=tqNhI5HGPsk" target="_blank">YouTube</a></li>    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-block">
                     <div class="hover_place">
                         <img class="imge" src="img/projects/covers/blogger-gram_cover.png" alt="">
