link fix for network

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     <ul>
                                         <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
                                         <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
-                                        <li><a href="https://github.com/ymmy1/network" target="_blank">YouTube</a></li>    
+                                        <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>    
                                     </ul>
                                 </div>
                                 <div class="languages">
@@ -285,11 +285,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="flip-content-back" id="mail-flip">
+                            <div class="flip-content-back" id="network-flip">
                                 <ul>
-                                    <li><a href="https://github.com/ymmy1/mail" target="_blank">GitHub</a></li>
-                                    <li><a href="http://mail-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
-                                    <li><a href="https://www.youtube.com/watch?v=tqNhI5HGPsk" target="_blank">YouTube</a></li>    
+                                    <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
+                                    <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                    <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>     
                                 </ul>
                             </div>
                         </div>
