removing themes for now

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav m-auto mt-2">
-                    <li class="nav-item ml-auto"><button id="sakura-btn" class="nav-link theme" data-page="sakura">Sakura Theme</button></li>
+                    <!-- <li class="nav-item ml-auto"><button id="sakura-btn" class="nav-link theme" data-page="sakura">Sakura Theme</button></li> -->
                     <li class="nav-item ml-auto"><a class="nav-link contact-link" href="#my-projects">My Projects</a></li>
                     <li class="nav-item ml-auto"><a class="nav-link" href="img/certificates/Oleg_Nosyrev_Front_End_Portfolio.pdf" target="_blank">Resume</a></li>
                     <li class="nav-item ml-auto"><a class="nav-link" href="#" data-toggle="modal" data-target="#UW">University of Washington</a></li>
@@ -49,7 +49,7 @@
                             <a id="contact-link" class="nav-social-link contact-link" href="#contact-me"><i class="fas fa-at"></i></a>
                         </div>
                     </li>
-                    <li class="nav-item ml-auto"><button id="ocean-btn" class="nav-link theme" data-page="ocean">Ocean Theme</button></li>
+                    <!-- <li class="nav-item ml-auto"><button id="ocean-btn" class="nav-link theme" data-page="ocean">Ocean Theme</button></li> -->
                 </ul>
             </div>
         </nav>
