--- a/index.html
+++ b/index.html
@@ -145,7 +145,110 @@
         <div class="snow-bg leaf-left"></div>
         <h2>My projects</h2>
             <div class="my-projects">
-                <div class="project-block">
+                <div class="project-block new_project">
+                    <div class="new_img">
+                        <img src="img/icon/new.png" alt="new_img">
+                    </div>
+                    <div class="hover_place">
+                        <img class="imge" src="img/projects/originals/facebook_cover.png" alt="facebook_cover">
+                    </div>
+                    <div class="flip-content">
+                        <div class="flip-content-inner">
+                            <div class="flip-content-front">
+                                <div class="text">
+                                    <h3>Facebook Clone</h3>
+                                    <p><strong>Django</strong></p>
+                                    <p><strong>Django application</strong> also Facebook clone, this website will allow you to <strong>Login</strong> / <strong>Register</strong> as a user.<strong>Post</strong> / <strong>Like</strong> / <strong>UnLike</strong> / <strong>Comment</strong> / <strong>Edit</strong> / <strong>Delete</strong> Posts. <strong>See friends online.</strong> <strong>Edit</strong> Cover Photo / Profile Photo / Public Information. <strong>Sending</strong> Friend Requests / <strong>Canceling</strong> Friend Requests / <strong>Deleting</strong> existing friend and <strong>many other things!</strong> </p>
+                                    
+                                </div>
+                                <div class="hidden-links">
+                                    <ul>
+                                        <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
+                                        <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                        <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>    
+                                    </ul>
+                                </div>
+                                <div class="languages">
+                                    <span>Languages</span>
+                                    <div class="skill-bar">
+                                        <div class="html" style="width: 44.5%;"></div>
+                                        <div class="scss" style="width: 30.2%;"></div>
+                                        <div class="py" style="width: 18.6%;"></div>
+                                        <div class="js" style="width: 6.7%;"></div>
+                                    </div>
+                                    <div class="details">
+                                        <ul>
+                                            <li><div class="html"></div>HTML 44.5%</li>
+                                            <li><div class="scss"></div>SCSS 30.2%</li>
+                                            <li><div class="py"></div>Python 18.6%</li>
+                                            <li><div class="js"></div>JavaScript 6.7%</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-content-back" id="facebook-flip">
+                                <ul>
+                                    <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
+                                    <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                    <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div  class="project-block">
+                    <div class="hover_place">
+                        <img class="imge" src="img/projects/originals/network_cover.png" alt="">
+                    </div>
+                    <div class="flip-content">
+                        <div class="flip-content-inner">
+                            <div class="flip-content-front">
+                                <div class="text">
+                                    <h3>Twitter-Like Django App</h3>
+                                    <p><strong>Django</strong></p>
+                                    <p>Twitter like network with Python Dango allows you to Register your mailbox(user@example.com) and select an avatar.
+                                        User can post posts on the main page, follow users and like posts. Also user can only view following posts as well 
+                                        as open the profile of any other user and see thi user's posts</p>
+                                </div>
+                                <div class="hidden-links">
+                                    <ul>
+                                        <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
+                                        <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                        <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>    
+                                    </ul>
+                                </div>
+                                <div class="languages">
+                                    <span>Languages</span>
+                                    <div class="skill-bar">
+                                        <div class="py" style="width: 41.1%;"></div>
+                                        <div class="html" style="width: 40.9%;"></div>
+                                        <div class="css" style="width: 12.0%;"></div>
+                                        <div class="js" style="width: 6.0%;"></div>
+                                    </div>
+                                    <div class="details">
+                                        <ul>
+                                            <li><div class="py"></div>Python 41.1%</li>
+                                            <li><div class="html"></div>HTML 40.9%</li>
+                                            <li><div class="css"></div>CSS 12.0%</li>
+                                            <li><div class="js"></div>JavaScript 6.0%</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-content-back" id="network-flip">
+                                <ul>
+                                    <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
+                                    <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                    <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>     
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-block favorite_project">
+                    <div class="new_img">
+                        <img src="img/icon/favorite.png" alt="new_img">
+                    </div>
                     <div class="hover_place">
                         <img class="imge" src="img/projects/covers/3_in_one_big2.png" alt="">
                     </div>
@@ -247,55 +350,6 @@
                         </div>
                     </div>
                 </div>
-                <div  class="project-block">
-                    <div class="hover_place">
-                        <img class="imge" src="img/projects/originals/network_cover.png" alt="">
-                    </div>
-                    <div class="flip-content">
-                        <div class="flip-content-inner">
-                            <div class="flip-content-front">
-                                <div class="text">
-                                    <h3>Twitter-Like Django App</h3>
-                                    <p><strong>Django</strong></p>
-                                    <p>Twitter like network with Python Dango allows you to Register your mailbox(user@example.com) and select an avatar.
-                                        User can post posts on the main page, follow users and like posts. Also user can only view following posts as well 
-                                        as open the profile of any other user and see thi user's posts</p>
-                                </div>
-                                <div class="hidden-links">
-                                    <ul>
-                                        <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
-                                        <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
-                                        <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>    
-                                    </ul>
-                                </div>
-                                <div class="languages">
-                                    <span>Languages</span>
-                                    <div class="skill-bar">
-                                        <div class="py" style="width: 41.1%;"></div>
-                                        <div class="html" style="width: 40.9%;"></div>
-                                        <div class="css" style="width: 12.0%;"></div>
-                                        <div class="js" style="width: 6.0%;"></div>
-                                    </div>
-                                    <div class="details">
-                                        <ul>
-                                            <li><div class="py"></div>Python 41.1%</li>
-                                            <li><div class="html"></div>HTML 40.9%</li>
-                                            <li><div class="css"></div>CSS 12.0%</li>
-                                            <li><div class="js"></div>JavaScript 6.0%</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flip-content-back" id="network-flip">
-                                <ul>
-                                    <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
-                                    <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
-                                    <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>     
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="project-block">
                     <div class="hover_place">
                         <img class="imge" src="img/projects/covers/blogger-gram_cover.png" alt="">
@@ -346,7 +400,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-block">
+                <div class="project-block recent_project">
+                    <div class="new_img">
+                        <img src="img/icon/recent.png" alt="new_img">
+                    </div>
                     <div class="hover_place">
                         <img class="imge" src="img/projects/covers/book-review_cover.png" alt="">
                     </div>
