cs50 web certificate added

--- a/index.html
+++ b/index.html
@@ -731,10 +731,10 @@
           </button>
         </div>
         <div class="modal-body">
-          <img src="https://i.imgflip.com/43ce8h.jpg" alt="">
+          <img src="img/certificates/CS50W.png" alt="">
         </div>
         <div class="modal-footer">
-            <a href="img/certificates/43ceb7.jpg" download>
+            <a href="img/certificates/CS50W.pdf" download>
                 <button type="button" class="btn">
                     <i class="fa fa-download"></i> Download
                 </button>
