sakura theme is back

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav m-auto mt-2">
-                    <!-- <li class="nav-item ml-auto"><button id="sakura-btn" class="nav-link theme" data-page="sakura">Sakura Theme</button></li> -->
+                    <li class="nav-item ml-auto"><button id="sakura-btn" class="nav-link theme"
+                            data-page="sakura">Sakura Theme</button></li>
                     <li class="nav-item ml-auto"><a class="nav-link contact-link" href="#my-projects">My Projects</a>
                     </li>
                     <li class="nav-item ml-auto"><a class="nav-link"
@@ -61,7 +62,8 @@
                                     class="fas fa-at"></i></a>
                         </div>
                     </li>
-                    <!-- <li class="nav-item ml-auto"><button id="ocean-btn" class="nav-link theme" data-page="ocean">Ocean Theme</button></li> -->
+                    <li class="nav-item ml-auto"><button id="ocean-btn" class="nav-link theme" data-page="ocean">Ocean
+                            Theme</button></li>
                 </ul>
             </div>
         </nav>
@@ -190,7 +192,8 @@
                                     <strong>See friends online.</strong> <strong>Edit</strong> Cover Photo / Profile
                                     Photo / Public Information. <strong>Sending</strong> Friend Requests /
                                     <strong>Canceling</strong> Friend Requests / <strong>Deleting</strong> existing
-                                    friend and <strong>many other things!</strong> </p>
+                                    friend and <strong>many other things!</strong>
+                                </p>
 
                             </div>
                             <div class="hidden-links">
@@ -253,7 +256,8 @@
                                 <p><strong>React app</strong> Netflix home page front end clone.
                                     <strong>TMBD API</strong> used to fetch
                                     netflix movies. Movie trailer is used for automatic searching movies trailers and
-                                    fetching is succeeded from YouTube.</p>
+                                    fetching is succeeded from YouTube.
+                                </p>
                             </div>
                             <div class="hidden-links">
                                 <ul>
@@ -436,7 +440,8 @@
                                     and send out emails to other email adresses in the system. The app does not send
                                     emails out of its own
                                     <strong>database</strong>. Features as Send/Read/Archive/Compose and Reply are
-                                    available to use</p>
+                                    available to use
+                                </p>
                             </div>
                             <div class="hidden-links">
                                 <ul>
@@ -497,9 +502,11 @@
                                     <strong>SQLite database</strong>
                                     to store comments likes and user detalis such as nickname and password. Features
                                     available: you can scroll
-                                    down the images, <strong>like them and leave comments</strong></p>
+                                    down the images, <strong>like them and leave comments</strong>
+                                </p>
                                 <P>Not available for demo. Needs to be rewritten in PostgreSQL to upload to
-                                    <strong>Heroku(in proccess)</strong></P>
+                                    <strong>Heroku(in proccess)</strong>
+                                </P>
 
                             </div>
                             <div class="hidden-links">
@@ -558,7 +565,8 @@
                                     goodreads to display
                                     the reviewing book's credentials, once user leaves a star and posts a review, a
                                     <strong>new API</strong> now of our
-                                    website is now generated for future access </p>
+                                    website is now generated for future access
+                                </p>
 
                             </div>
                             <div class="hidden-links">
@@ -621,7 +629,8 @@
                                     available /
                                     Sell one of multiple stocks and shares / History to keep a track on your buys and
                                     sells /
-                                    And the main page to track your current <strong>stock prices</strong></p>
+                                    And the main page to track your current <strong>stock prices</strong>
+                                </p>
                             </div>
                             <div class="hidden-links">
                                 <ul>
@@ -680,7 +689,8 @@
                                     or hybrid. Created json file for future API requests for Electric Cars & Hybrid Cars
                                     links.
                                     <strong>The API</strong> is being use to get data for Price/Title/Image/Youtube
-                                    Review link and more</p>
+                                    Review link and more
+                                </p>
                             </div>
                             <div class="hidden-links">
                                 <ul>
