--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
                     </div>
                     <div class="carousel-item">
                         <div class="skills">
+                            <div class="skill skill-react">
+                                <p>REACT JSX</p><img src="img/icon/react.png" alt="skill-react">
+                            </div>
+                            <div class="skill skill-vue">
+                                <p>Vue / NUXT</p><img src="img/icon/vue.png" alt="skill-vue">
+                            </div>
                             <div class="skill skill-html">
                                 <p>HTML5</p> <img src="img/icon/html.png" alt="skill-html">
                             </div>
@@ -144,12 +150,6 @@
                             </div>
                             <div class="skill skill-python">
                                 <p>Python&nbsp;/&nbsp;Django</p><img src="img/icon/python.png" alt="skill-python">
-                            </div>
-                            <div class="skill skill-vue">
-                                <p>Vue / NUXT</p><img src="img/icon/vue.png" alt="skill-vue">
-                            </div>
-                            <div class="skill skill-react">
-                                <p>REACT</p><img src="img/icon/react.png" alt="skill-react">
                             </div>
                         </div>
                     </div>
