adding weather app part 1

--- a/index.html
+++ b/index.html
@@ -174,66 +174,56 @@
         <div class="my-projects">
             <div class="project-block new_project">
                 <div class="new_img">
-                    <img src="img/icon/new.png" alt="new_img">
+                    <img src="img/icon/new_green.png" alt="new_img">
                 </div>
                 <div class="hover_place">
-                    <img class="imge" src="img/projects/originals/facebook_cover.png" alt="facebook_cover">
+                    <img class="imge" src="img/projects/originals/weather_cover.png" alt="weather_cover">
                 </div>
                 <div class="flip-content">
                     <div class="flip-content-inner">
                         <div class="flip-content-front">
                             <div class="text">
-                                <h3>Facebook Clone</h3>
-                                <p><strong>Django</strong></p>
-                                <p><strong>Django application</strong> also Facebook clone, this website will allow you
-                                    to <strong>Login</strong> / <strong>Register</strong> as a
-                                    user.<strong>Post</strong> / <strong>Like</strong> / <strong>UnLike</strong> /
-                                    <strong>Comment</strong> / <strong>Edit</strong> / <strong>Delete</strong> Posts.
-                                    <strong>See friends online.</strong> <strong>Edit</strong> Cover Photo / Profile
-                                    Photo / Public Information. <strong>Sending</strong> Friend Requests /
-                                    <strong>Canceling</strong> Friend Requests / <strong>Deleting</strong> existing
-                                    friend and <strong>many other things!</strong>
+                                <h3>Vue Weather</h3>
+                                <p><strong>Vue.js</strong></p>
+                                <p><strong>Vue.js weather application</strong>. Uses open source API's from <a
+                                        href="https://openweathermap.org/">https://openweathermap.org/</a> to fetch the
+                                    current weather & forecast for 5 days ahead. Front End sidem such us all animations,
+                                    transitions and displaying the data was build in Vue.js
                                 </p>
-
                             </div>
                             <div class="hidden-links">
                                 <ul>
-                                    <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
-                                    <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a>
-                                    </li>
+                                    <li><a href="https://github.com/ymmy1/weather" target="_blank">GitHub</a></li>
+                                    <li><a href="https://ymmy-weather.netlify.app/" target="_blank">Visit Site</a></li>
                                     <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
                                 </ul>
                             </div>
                             <div class="languages">
                                 <span>Languages</span>
                                 <div class="skill-bar">
-                                    <div class="html" style="width: 44.5%;"></div>
-                                    <div class="scss" style="width: 30.2%;"></div>
-                                    <div class="py" style="width: 18.6%;"></div>
-                                    <div class="js" style="width: 6.7%;"></div>
+                                    <div class="vue" style="width: 92.1%;"></div>
+                                    <div class="html" style="width: 6.1%;"></div>
+                                    <div class="js" style="width: 1.8%;"></div>
                                 </div>
                                 <div class="details">
                                     <ul>
                                         <li>
-                                            <div class="html"></div>HTML 44.5%
+                                            <div class="vue"></div>Vue.js 92.1%
                                         </li>
                                         <li>
-                                            <div class="scss"></div>SCSS 30.2%
+                                            <div class="html"></div>HTML 6.1%
                                         </li>
                                         <li>
-                                            <div class="py"></div>Python 18.6%
-                                        </li>
-                                        <li>
-                                            <div class="js"></div>JavaScript 6.7%
+                                            <div class="js"></div>JavaScript 1.8%
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="flip-content-back" id="facebook-flip">
+                        <div class="flip-content-back" id="weather-flip">
                             <ul>
-                                <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
-                                <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                <li><a href="https://github.com/ymmy1/weather" target="_blank">GitHub</a></li>
+                                <li><a href="https://ymmy-weather.netlify.app/" target="_blank">Visit Site</a></li>
                                 <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
                             </ul>
                         </div>
@@ -295,6 +285,71 @@
                                 <li><a href="https://netflix-ymmy-clone.web.app/" target="_blank">Visit Site</a>
                                 </li>
                                 <li class="disabled">YouTube</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="project-block">
+                <div class="hover_place">
+                    <img class="imge" src="img/projects/originals/facebook_cover.png" alt="facebook_cover">
+                </div>
+                <div class="flip-content">
+                    <div class="flip-content-inner">
+                        <div class="flip-content-front">
+                            <div class="text">
+                                <h3>Facebook Clone</h3>
+                                <p><strong>Django</strong></p>
+                                <p><strong>Django application</strong> also Facebook clone, this website will allow you
+                                    to <strong>Login</strong> / <strong>Register</strong> as a
+                                    user.<strong>Post</strong> / <strong>Like</strong> / <strong>UnLike</strong> /
+                                    <strong>Comment</strong> / <strong>Edit</strong> / <strong>Delete</strong> Posts.
+                                    <strong>See friends online.</strong> <strong>Edit</strong> Cover Photo / Profile
+                                    Photo / Public Information. <strong>Sending</strong> Friend Requests /
+                                    <strong>Canceling</strong> Friend Requests / <strong>Deleting</strong> existing
+                                    friend and <strong>many other things!</strong>
+                                </p>
+
+                            </div>
+                            <div class="hidden-links">
+                                <ul>
+                                    <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
+                                    <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a>
+                                    </li>
+                                    <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
+                                </ul>
+                            </div>
+                            <div class="languages">
+                                <span>Languages</span>
+                                <div class="skill-bar">
+                                    <div class="html" style="width: 44.5%;"></div>
+                                    <div class="scss" style="width: 30.2%;"></div>
+                                    <div class="py" style="width: 18.6%;"></div>
+                                    <div class="js" style="width: 6.7%;"></div>
+                                </div>
+                                <div class="details">
+                                    <ul>
+                                        <li>
+                                            <div class="html"></div>HTML 44.5%
+                                        </li>
+                                        <li>
+                                            <div class="scss"></div>SCSS 30.2%
+                                        </li>
+                                        <li>
+                                            <div class="py"></div>Python 18.6%
+                                        </li>
+                                        <li>
+                                            <div class="js"></div>JavaScript 6.7%
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flip-content-back" id="facebook-flip">
+                            <ul>
+                                <li><a href="https://github.com/ymmy1/facebook" target="_blank">GitHub</a></li>
+                                <li><a href="https://ymmy-facebook.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
                             </ul>
                         </div>
                     </div>
