--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <p><strong>Vue.js</strong></p>
                                 <p><strong>Vue.js weather application</strong>. Uses open source API's from <a
                                         href="https://openweathermap.org/">https://openweathermap.org/</a> to fetch the
-                                    current weather & forecast for 5 days ahead. Front End sidem such us all animations,
+                                    current weather & forecast for 5 days ahead. Front End side such us all animations,
                                     transitions and displaying the data was build in Vue.js
                                 </p>
                             </div>
@@ -195,7 +195,7 @@
                                 <ul>
                                     <li><a href="https://github.com/ymmy1/weather" target="_blank">GitHub</a></li>
                                     <li><a href="https://ymmy-weather.netlify.app/" target="_blank">Visit Site</a></li>
-                                    <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
+                                    <li class="disabled">YouTube</li>
                                 </ul>
                             </div>
                             <div class="languages">
@@ -224,7 +224,7 @@
                             <ul>
                                 <li><a href="https://github.com/ymmy1/weather" target="_blank">GitHub</a></li>
                                 <li><a href="https://ymmy-weather.netlify.app/" target="_blank">Visit Site</a></li>
-                                <li><a href="https://youtu.be/YUxv7zD3H3M" target="_blank">YouTube</a></li>
+                                <li class="disabled">YouTube</li>
                             </ul>
                         </div>
                     </div>
