api expired links

--- a/index.html
+++ b/index.html
@@ -625,7 +625,8 @@
                             <div class="hidden-links">
                                 <ul>
                                     <li><a href="https://github.com/ymmy1/book-review" target="_blank">GitHub</a></li>
-                                    <li><a href="https://bookreview-ymmy.herokuapp.com/" target="_blank">Visit Site</a>
+                                    <li class="disabled">Visit Site</li>
+                                    <!-- <li><a href="https://bookreview-ymmy.herokuapp.com/" target="_blank">Visit Site</a> -->
                                     </li>
                                     <li><a href="https://youtu.be/-tfpc1wXBzM" target="_blank">YouTube</a></li>
                                 </ul>
@@ -655,7 +656,8 @@
                         <div class="flip-content-back" id="bookreview-flip">
                             <ul>
                                 <li><a href="https://github.com/ymmy1/book-review" target="_blank">GitHub</a></li>
-                                <li><a href="https://bookreview-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                <li class="disabled">Visit Site</li>
+                                <!-- <li><a href="https://bookreview-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li> -->
                                 <li><a href="https://youtu.be/-tfpc1wXBzM" target="_blank">YouTube</a></li>
                             </ul>
 
@@ -688,7 +690,8 @@
                             <div class="hidden-links">
                                 <ul>
                                     <li><a href="https://github.com/ymmy1/finance" target="_blank">GitHub</a></li>
-                                    <li><a href="https://finance-ymmy.herokuapp.com/" target="_blank">Visit Site</a>
+                                    <li class="disabled">Visit Site</li>
+                                    <!-- <li><a href="https://finance-ymmy.herokuapp.com/" target="_blank">Visit Site</a> -->
                                     </li>
                                     <li><a href="https://youtu.be/DS4GYnYPHaw" target="_blank">YouTube</a></li>
                                 </ul>
@@ -718,7 +721,8 @@
                         <div class="flip-content-back" id="trading-flip">
                             <ul>
                                 <li><a href="https://github.com/ymmy1/finance" target="_blank">GitHub</a></li>
-                                <li><a href="https://finance-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
+                                <li class="disabled">Visit Site</li>
+                                <!-- <li><a href="https://finance-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li> -->
                                 <li><a href="https://youtu.be/DS4GYnYPHaw" target="_blank">YouTube</a></li>
                             </ul>
                         </div>
