--- a/index.html
+++ b/index.html
@@ -172,6 +172,69 @@
         <div class="snow-bg leaf-left"></div>
         <h2>My projects</h2>
         <div class="my-projects">
+            <div class="project-block favorite_project">
+                <div class="new_img">
+                    <img src="img/icon/favorite.png" alt="new_img">
+                </div>
+                <div class="hover_place">
+                    <img class="imge" src="img/projects/covers/3_in_one_big2.png" alt="">
+                </div>
+                <div class="flip-content">
+                    <div class="flip-content-inner">
+                        <div class="flip-content-front">
+                            <div class="text">
+                                <h3>FlackyChat</h3>
+                                <p><strong>React + Firebase</strong></p>
+                                <p>
+                                    <strong>React</strong> Real-Time Chat App connected with firebase database. Sign in through your google account and start messaging! You can also add different rooms to chat and change <strong>Themes</strong>!
+                                </p>
+                            </div>
+                            <div class="hidden-links">
+                                <ul>
+                                    <li><a href="https://github.com/ymmy1/flacky-chat" target="_blank">GitHub</a></li>
+                                    <li><a href="https://flacky-chat.netlify.app/" target="_blank">Visit Site</a></li>
+                                    <li><a href="https://www.youtube.com/watch?v=Q8chuGwnHvk&t=18s"
+                                            target="_blank">YouTube</a></li>
+                                </ul>
+                            </div>
+                            <div class="languages">
+                                <span>Languages</span>
+                                <div class="skill-bar">
+                                    <div class="scss" style="width: 58.2%;"></div>
+                                    <div class="js" style="width: 35.3%;"></div>
+                                    <div class="html" style="width: 5.4%;"></div>
+                                    <div class="css" style="width: 1.1%;"></div>
+                                </div>
+                                <div class="details">
+                                    <ul>
+                                        <li>
+                                            <div class="scss"></div>SCSS 58.2%
+                                        </li>
+                                        <li>
+                                            <div class="js"></div>JavaScript 35.3%
+                                        </li>
+                                        <li>
+                                            <div class="html"></div>HTML 5.4%
+                                        </li>
+                                        <li>
+                                            <div class="css"></div>CSS 1.1%
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flip-content-back" id="flackychat-flip">
+                            <ul>
+                                <li><a href="https://github.com/ymmy1/FlackyChat" target="_blank">GitHub</a></li>
+                                <li><a href="https://flacky-chat.netlify.app/" target="_blank">Visit Site</a></li>
+
+                                <li><a href="https://www.youtube.com/watch?v=Q8chuGwnHvk&t=18s"
+                                        target="_blank">YouTube</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="project-block new_project">
                 <div class="new_img">
                     <img src="img/icon/new_green.png" alt="new_img">
@@ -242,7 +305,7 @@
                         <div class="flip-content-front">
                             <div class="text">
                                 <h3>React Netflix</h3>
-                                <p>React</p>
+                                <p><strong>React</strong></p>
                                 <p><strong>React app</strong> Netflix home page front end clone.
                                     <strong>TMBD API</strong> used to fetch
                                     netflix movies. Movie trailer is used for automatic searching movies trailers and
@@ -409,70 +472,6 @@
                                 <li><a href="https://github.com/ymmy1/network" target="_blank">GitHub</a></li>
                                 <li><a href="http://network-ymmy.herokuapp.com/" target="_blank">Visit Site</a></li>
                                 <li><a href="https://youtu.be/s70A5L4SdbU" target="_blank">YouTube</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="project-block favorite_project">
-                <div class="new_img">
-                    <img src="img/icon/favorite.png" alt="new_img">
-                </div>
-                <div class="hover_place">
-                    <img class="imge" src="img/projects/covers/3_in_one_big2.png" alt="">
-                </div>
-                <div class="flip-content">
-                    <div class="flip-content-inner">
-                        <div class="flip-content-front">
-                            <div class="text">
-                                <h3>FlackyChat</h3>
-                                <p><strong>SocketIO</strong></p>
-                                <p>
-                                    <strong>Socket IO</strong> Chat App. Remembers a nickname without registration, lets
-                                    you enter rooms chat and sending messages without reloading the page.
-                                    You can also send private messages and change themes of your own choice.
-                                </p>
-                            </div>
-                            <div class="hidden-links">
-                                <ul>
-                                    <li><a href="https://github.com/ymmy1/FlackyChat" target="_blank">GitHub</a></li>
-                                    <li class="disabled">Visit Site</li>
-                                    <li><a href="https://www.youtube.com/watch?v=Q8chuGwnHvk&t=18s"
-                                            target="_blank">YouTube</a></li>
-                                </ul>
-                            </div>
-                            <div class="languages">
-                                <span>Languages</span>
-                                <div class="skill-bar">
-                                    <div class="js" style="width: 47.1%;"></div>
-                                    <div class="css" style="width: 24.7%;"></div>
-                                    <div class="html" style="width: 16.8%;"></div>
-                                    <div class="py" style="width: 11.4%;"></div>
-                                </div>
-                                <div class="details">
-                                    <ul>
-                                        <li>
-                                            <div class="js"></div>JavaScript 47.1%
-                                        </li>
-                                        <li>
-                                            <div class="css"></div>CSS 24.7%
-                                        </li>
-                                        <li>
-                                            <div class="html"></div>HTML 16.8%
-                                        </li>
-                                        <li>
-                                            <div class="py"></div>Python 11.4%
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="flip-content-back" id="flackychat-flip">
-                            <ul>
-                                <li><a href="https://github.com/ymmy1/FlackyChat" target="_blank">GitHub</a></li>
-                                <li class="disabled">Visit Site</li>
-                                <li><a href="https://www.youtube.com/watch?v=Q8chuGwnHvk&t=18s"
-                                        target="_blank">YouTube</a></li>
                             </ul>
                         </div>
                     </div>
