--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
                         </div>
                         <div class="flip-content-back" id="flackychat-flip">
                             <ul>
-                                <li><a href="https://github.com/ymmy1/FlackyChat" target="_blank">GitHub</a></li>
+                                <li><a href="https://github.com/ymmy1/flacky-chat" target="_blank">GitHub</a></li>
+
                                 <li><a href="https://flacky-chat.netlify.app/" target="_blank">Visit Site</a></li>
 
                                 <li><a href="https://www.youtube.com/watch?v=Q8chuGwnHvk&t=18s"
