--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
                             href="img/certificates/Oleg_Nosyrev_Frontend_resume.pdf" target="_blank">Resume</a></li>
                     <li class="nav-item ml-auto"><a class="nav-link" href="#" data-toggle="modal"
                             data-target="#UW">University of Washington</a></li>
-                    <li class="nav-item dropdown ml-auto">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            CS50 by Harvard
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50x">CS50x by
-                                Harvard</a>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50w">Web Programming
-                                by Harvard</a>
-                        </div>
-                    </li>
+                            <li class="nav-item dropdown ml-auto">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                CS50 by Harvard
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50x">CS50x by
+                                    Harvard</a>
+                                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50w">Web Programming
+                                        by Harvard</a>
+                                    </div>
+                                </li>
+                    <li  class="nav-item ml-auto"><a class="nav-link" href="#" data-toggle="modal"
+                            data-target="#INTERN">Internship</a></li>
 
                     <li class="nav-item ml-auto">
                         <div class="nav-link">
@@ -878,6 +880,31 @@
                 </div>
                 <div class="modal-footer">
                     <a href="img/certificates/UW_certificate.jpg" download>
+                        <button type="button" class="btn">
+                            <i class="fa fa-download"></i> Download
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal INTERN -->
+    <div class="modal fade" id="INTERN" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <img src="img/icon/mpa-icon.png" alt="MPA Logo" class="modal-logo">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Minority Programmers Association</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/certificates/MPA-Internship-Completion-Certificate-Oleg-1.png" alt="">
+                </div>
+                <div class="modal-footer">
+                    <a href="img/certificates/MPA-Internship-Completion-Certificate-Oleg.pdf" download>
                         <button type="button" class="btn">
                             <i class="fa fa-download"></i> Download
                         </button>
