--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Oleg Nosyrev Front End Developer Resume, Projects and Education History" />
+    <meta name="title" property="og:title" content="Oleg Nosyrev Front End Developer" />
+    <meta property="og:type" content="Portfolio" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/JU5VDPx.png" />
+    <meta name="description" property="og:description" content="Oleg Nosyrev Front End Developer" /><meta name="author" content="Oleg Nosyrev" />
+
+
+
     <title>Front End Web Developer | Oleg N. </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -20,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/ocean.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
