--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="title" property="og:title" content="Oleg Nosyrev Front End Developer" />
     <meta property="og:type" content="Portfolio" />
     <meta name="image" property="og:image" content="https://i.imgur.com/JU5VDPx.png" />
-    <meta name="description" property="og:description" content="Oleg Nosyrev Front End Developer" /><meta name="author" content="Oleg Nosyrev" />
+    <meta name="description" property="og:description" content="Oleg Nosyrev Front End Developer Resume, Projects and Education History" />
+    <meta name="author" content="Oleg Nosyrev" />
 
 
 
