adding 6 years of exp

--- a/index.html
+++ b/index.html
@@ -264,13 +264,14 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <p>MOTIVATED, QUICK LEARNING, SELF-TAUGHT FRONT END DEVELOPER</p>
+              <p>MOTIVATED, QUICK LEARNING, SELF-TAUGHT FRONT END DEVELOPER.</p>
+              <p>HARVARD UNIVERSITY & UNIVERSITY OF WASHINGTON STUDENT.</p>
               <p>
-                UNIVERSITY OF WASHINGTON & HARVARD UNIVERSITY COURSES STUDENT
+                6+ YEAR OF EXPERIENCE WITH FRONTEND APPLICATIONS DEVELOPMENT.
               </p>
               <p>
                 PRIMARY FOCUSING ON FRONT END DEVELOPMENT WITH A BASIC KNOWLEDGE
-                OF BACK END
+                OF BACK END.
               </p>
             </div>
             <div class="carousel-item">
